--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Mi Nueva Web</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<!-- Menú -->
+	<nav>
+		<ul>
+			<li><a href="#">Inicio</a></li>
+			<li><a href="#">Acerca de</a></li>
+			<li><a href="#">Servicios</a></li>
+			<li><a href="#">Contacto</a></li>
+		</ul>
+	</nav>
+	<!-- Sección con efecto Parallax -->
+	<section class="parallax">
+		<div class="parallax-text">
+			<h1>¡Bienvenidos a mi nueva web!</h1>
+		</div>
+	</section>
+	<!-- Sección con mesa -->
+	<section class="table">
+		<h2>Mi mesa</h2>
+		<p>Esta es mi mesa personalizada con HTML y CSS. Me encanta cómo se ve y se siente.</p>
+	</section>
+</body>
+</html>
