--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 	<!-- Sección con mesa -->
 	<div class="caixa1">
     <img src="img/exerciciartcodi.png" width="500" height="450">
-  <section class="table">
-		<h2>Mi mesa</h2>
-		<p>Esta es mi mesa personalizada con HTML y CSS. Me encanta cómo se ve y se siente.</p>
-	</section>
+  </div>
+   <div class="caixa2">
+    <p><strong>Lorem Ipsum</strong> és un text de farciment usat per la indústria de la tipografia i la impremta. Lorem Ipsum ha estat el text estàndard de la indústria des de l'any 1500, quan un impressor desconegut va fer servir una galerada de text i la va mesclar per crear un llibre de mostres tipogràfiques. No només ha sobreviscut cinc segles, sinó que ha fet el salt cap a la creació de tipus de lletra electrònics, romanent essencialment sense canvis. Es va popularitzar l'any 1960 amb el llançament de fulls Letraset que contenien passatges de Lorem Ipsum, i més recentment amb programari d'autoedició com Aldus Pagemaker que inclou versions de Lorem Ipsum.</p>
+    <a class="boto" href="https://ca.wikipedia.org/wiki/Lorem_ipsum" target="_blank">llegir més...</a>
+  </div>
 </body>
 </html>
