--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Mi Nueva Web</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-	<!-- Menú -->
-	<nav>
-		<ul>
-			<li><a href="#">Inicio</a></li>
-			<li><a href="#">Acerca de</a></li>
-			<li><a href="#">Servicios</a></li>
-			<li><a href="#">Contacto</a></li>
-		</ul>
-	</nav>
-	<!-- Sección con efecto Parallax -->
-	<section class="parallax">
-		<div class="parallax-text">
-			<h1>¡Bienvenidos a mi nueva web!</h1>
-		</div>
-	</section>
-	<!-- Sección con mesa -->
-	<div class="caixa1">
-    <img src="img/exerciciartcodi.png" width="500" height="450">
-  </div>
+  <head>
+	  <title>La meva web</title>
+	  <link rel="stylesheet" type="text/css" href="css/style.css">
+  </head>
+  <body>
+	  <nav>
+		  <ul>
+			  <li><a href="#">Inicio</a></li>
+			  <li><a href="#">Acerca de</a></li>
+			  <li><a href="#">Servicios</a></li>
+			  <li><a href="#">Contacto</a></li>
+		  </ul>
+	  </nav>
+	
+	  <section class="parallax">
+		  <div class="parallax-text">
+			  <h1>¡Bienvenidos a mi nueva web!</h1>
+		  </div>
+	  </section>
+
+	  <div class="caixa1">
+      <img src="img/exerciciartcodi.png" width="500" height="450">
+    </div>
    <div class="caixa2">
-    <p><strong>Lorem Ipsum</strong> és un text de farciment usat per la indústria de la tipografia i la impremta. Lorem Ipsum ha estat el text estàndard de la indústria des de l'any 1500, quan un impressor desconegut va fer servir una galerada de text i la va mesclar per crear un llibre de mostres tipogràfiques. No només ha sobreviscut cinc segles, sinó que ha fet el salt cap a la creació de tipus de lletra electrònics, romanent essencialment sense canvis. Es va popularitzar l'any 1960 amb el llançament de fulls Letraset que contenien passatges de Lorem Ipsum, i més recentment amb programari d'autoedició com Aldus Pagemaker que inclou versions de Lorem Ipsum.</p>
-    <a class="boto" href="https://ca.wikipedia.org/wiki/Lorem_ipsum" target="_blank">llegir més...</a>
-  </div>
-</body>
+      <p><strong>Lorem Ipsum</strong> és un text de farciment usat per la indústria de la tipografia i la impremta. Lorem Ipsum ha estat el text estàndard de la indústria des de l'any 1500, quan un impressor desconegut va fer servir una galerada de text i la va mesclar per crear un llibre de mostres tipogràfiques. No només ha sobreviscut cinc segles, sinó que ha fet el salt cap a la creació de tipus de lletra electrònics, romanent essencialment sense canvis. Es va popularitzar l'any 1960 amb el llançament de fulls Letraset que contenien passatges de Lorem Ipsum, i més recentment amb programari d'autoedició com Aldus Pagemaker que inclou versions de Lorem Ipsum.</p>
+      <a class="boto" href="https://ca.wikipedia.org/wiki/Lorem_ipsum" target="_blank">llegir més...</a>
+    </div>
+
+  </body>
 </html>
