--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	  <section class="parallax">
 		  <div class="parallax-text">
-			  <h1>¡Bienvenidos a mi nueva web!</h1>
+			  <h1>Benvinguts a la meva web</h1>
 		  </div>
 	  </section>
 
@@ -24,8 +24,9 @@
       <img src="img/exerciciartcodi.png" width="500" height="450">
     </div>
    <div class="caixa2">
-      <p><strong>Lorem Ipsum</strong> és un text de farciment usat per la indústria de la tipografia i la impremta. Lorem Ipsum ha estat el text estàndard de la indústria des de l'any 1500, quan un impressor desconegut va fer servir una galerada de text i la va mesclar per crear un llibre de mostres tipogràfiques. No només ha sobreviscut cinc segles, sinó que ha fet el salt cap a la creació de tipus de lletra electrònics, romanent essencialment sense canvis. Es va popularitzar l'any 1960 amb el llançament de fulls Letraset que contenien passatges de Lorem Ipsum, i més recentment amb programari d'autoedició com Aldus Pagemaker que inclou versions de Lorem Ipsum.</p>
-      <a class="boto" href="https://ca.wikipedia.org/wiki/Lorem_ipsum" target="_blank">llegir més...</a>
+      <p><strong>Pa amb tomàquet</strong> El pa amb tomàquet, pa amb tomaca, pa amb tomata (Gironès) o pa amb tomata (Lleida) és una típica recepta de la cuina catalana i balear. Ha estat considerat el plat paradigmàtic de la cuina catalana. Consisteix en una llesca de pa sucat amb mig tomàquet madur i amanit amb oli d'oliva i sal.
+                Tradicionalment, menjat amb una arengada a sobre, era un àpat de pagès. Es pot acompanyar amb botifarres, fuet, pernil, formatges, anxoves o un altre peix adobat, o verdures rostides a la graella com l'escalivada. La base original solien ser les llesques de pa de pagès, però actualment s'utilitza també pa de barra.</p>
+      <a class="boto" href="https://ca.wikipedia.org/wiki/Pa_amb_tom%C3%A0quet" target="_blank">saber mes...</a>
     </div>
 
   </body>
