--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body>
 	  <nav>
 		  <ul>
-			  <li><a href="#">Inicio</a></li>
-			  <li><a href="#">Acerca de</a></li>
-			  <li><a href="#">Servicios</a></li>
-			  <li><a href="#">Contacto</a></li>
+			  <li><a href="#">Inici</a></li>
+			  <li><a href="#">Més receptes</a></li>
+			  <li><a href="#">Serveis</a></li>
+			  <li><a href="#">Contacte</a></li>
 		  </ul>
 	  </nav>
 	
