--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 		  <ul>
 			  <li><a href="#">Inici</a></li>
 			  <li><a href="#">Més receptes</a></li>
+            <ul><li><a href="">Trinxat de Cerdanya</a></li>
+            <li><a href="">Botifarra amb seques</a></li>
+            <li><a href="">Sopa de galets</a></li>
 			  <li><a href="#">Serveis</a></li>
-			  <li><a href="#">Contacte</a></li>
+            <ul><li><a href="">Servei 1</a></li>
+            <li><a href="">Servei 2</a></li>
+			  <li><a href="https://tomasgarolera.github.io/Exercici-1/">Contacte</a></li>
 		  </ul>
 	  </nav>
 	
