--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>La meva web</title>
+	  <title>EL BON PA AMB TOMÀQUET</title>
 	  <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
