--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 			  <li><a href="https://tomasgarolera.github.io/Exercici-1/">Contacte</a></li>
 		  </ul>
 	  </nav>
-	
+  </body>
+
 	  <section class="parallax">
 		  <div class="parallax-text">
 			  <h1>Benvinguts a la meva web</h1>
