--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 	  </section>
 
 	  <div class="caixa1">
-      <img src="img/exerciciartcodi.png" width="500" height="450">
+      <img src="img/artcodi.png" width="500" height="450">
     </div>
    <div class="caixa2">
       <p><strong>Pa amb tomàquet</strong> El pa amb tomàquet, pa amb tomaca, pa amb tomata (Gironès) o pa amb tomata (Lleida) és una típica recepta de la cuina catalana i balear. Ha estat considerat el plat paradigmàtic de la cuina catalana. Consisteix en una llesca de pa sucat amb mig tomàquet madur i amanit amb oli d'oliva i sal.
                 Tradicionalment, menjat amb una arengada a sobre, era un àpat de pagès. Es pot acompanyar amb botifarres, fuet, pernil, formatges, anxoves o un altre peix adobat, o verdures rostides a la graella com l'escalivada. La base original solien ser les llesques de pa de pagès, però actualment s'utilitza també pa de barra.</p>
-      <a class="boto" href="https://ca.wikipedia.org/wiki/Pa_amb_tom%C3%A0quet" target="_blank">saber mes...</a>
+      <a class="boto" href="https://ca.wikipedia.org/wiki/Pa_amb_tom%C3%A0quet" target="_blank">saber més...</a>
     </div>
 
   </body>
