--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	  <section class="parallax">
 		  <div class="parallax-text">
-			  <h1>Benvinguts a la meva web</h1>
+			  <h1>La cuina catalana</h1>
 		  </div>
 	  </section>
 
