--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>EL BON PA AMB TOMÀQUET</title>
+	  <title>LA CUINA CATALANA</title>
 	  <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
@@ -16,7 +16,7 @@
 
 	  <section class="parallax">
 		  <div class="parallax-text">
-			  <h1>La cuina catalana</h1>
+			  <h1>El bon pa amb tomàquet</h1>
 		  </div>
 	  </section>
 
