--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  </section>
 
 	  <div class="caixa1">
-      <img src="img/artcodi.png" width="500" height="450">
+      <img src="img/cuinacatalana.jpeg" width="500" height="450">
     </div>
    <div class="caixa2">
       <p><strong>Pa amb tomàquet</strong> El pa amb tomàquet, pa amb tomaca, pa amb tomata (Gironès) o pa amb tomata (Lleida) és una típica recepta de la cuina catalana i balear. Ha estat considerat el plat paradigmàtic de la cuina catalana. Consisteix en una llesca de pa sucat amb mig tomàquet madur i amanit amb oli d'oliva i sal.
