--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	  <nav>
 		  <ul>
 			  <li><a href="#">Inici</a></li>
-			  <li><a href="#">Més receptes</a></li>
+			  <li><a href="#">Més receptes</a>
+			  		<ul><li><a href="">Galets de Nadal</a></li>
+					<li><a href="">Trinxat de Cerdanya</a></li>
+					<li><a href="">Butifarra amb seques</a></li></ul>
+				</li>
 			  <li><a href="#">Serveis</a></li>
 			  <li><a href="https://tomasgarolera.github.io/Exercici-1/">Contacte</a></li>
 		  </ul>
