--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 					<li><a href="">Trinxat de Cerdanya</a></li>
 					<li><a href="">Butifarra amb seques</a></li></ul>
 				</li>
-			  <li><a href="#">Serveis</a></li>
+			  <li><a href="#">Millors restaurants tradicionals</a>
+			  		<ul><li><a href="">Casa la Iaia</a></li>
+					<li><a href="">Hotel Rosa, Taradell</a></li>
+					<li><a href="">El nou Monseny, Taradell</a></li>
+					<li><a href="">Fussimanya, Tavèrnoles</a></li></ul>
+				</li>
 			  <li><a href="https://tomasgarolera.github.io/Exercici-1/">Contacte</a></li>
 		  </ul>
 	  </nav>
