--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 					<li><a href="">Trinxat de Cerdanya</a></li>
 					<li><a href="">Butifarra amb seques</a></li></ul>
 				</li>
-			  <li><a href="#">Millors restaurants</a>
+			  <li><a href="#">Millors restaurants tradicionals</a>
 			  		<ul><li><a href="">Casa la Iaia</a></li>
-					<li><a href="">Hotel Rosa</a></li>
-					<li><a href="">El nou Monseny</a></li>
-					<li><a href="">Fussimanya</a></li></ul>
+					<li><a href="">Hotel Rosa, Taradell</a></li>
+					<li><a href="">El nou Monseny, Taradell</a></li>
+					<li><a href="">Fussimanya, Tavèrnoles</a></li></ul>
 				</li>
 			  <li><a href="https://tomasgarolera.github.io/Exercici-1/">Contacte</a></li>
 		  </ul>
