--- a/index.html
+++ b/index.html
@@ -6,21 +6,13 @@
   </head>
   <body>
 	  <nav>
-		  <ul>
-			  <li><a href="#">Inici</a></li>
-			  <li><a href="#">Més receptes</a>
-			  		<ul><li><a href="">Galets de Nadal</a></li>
-					<li><a href="">Trinxat de Cerdanya</a></li>
-					<li><a href="">Butifarra amb seques</a></li></ul>
-				</li>
-			  <li><a href="#">Millors restaurants tradicionals</a>
-			  		<ul><li><a href="">Casa la Iaia</a></li>
-					<li><a href="">Hotel Rosa, Taradell</a></li>
-					<li><a href="">El nou Monseny, Taradell</a></li>
-					<li><a href="">Fussimanya, Tavèrnoles</a></li></ul>
-				</li>
-			  <li><a href="https://tomasgarolera.github.io/Exercici-1/">Contacte</a></li>
-		  </ul>
+		<ul>
+			<li><a href="#">Inicio</a></li>
+			<li><a href="#">Acerca de</a></li>
+			<li><a href="#">Servicios</a></li>
+			<li><a href="#">Contacto</a></li>
+		</ul>
+
 	  </nav>
 
 	  <section class="parallax">
