--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 	  <nav>
 		<ul>
 			<li><a href="#">Inicio</a></li>
-			<li><a href="#">Acerca de</a></li>
-			<li><a href="#">Servicios</a></li>
+			<li><a href="#">Quiénes somos</a>
+				<ul><li><a href="">Historia</a></li>
+				<li><a href="">Prensa</a></li></ul>
+				</li>
+			<li><a href="#">Servicios</a>
+				<ul><li><a href="">Servicio 1</a></li>
+				<li><a href="">Servicio 2</a></li>
+				<li><a href="">Servicio 3</a></li>
+				<li><a href="">Servicio 4</a></li></ul>
+				</li>
+			<li><a href="#">Blog</a></li>
 			<li><a href="#">Contacto</a></li>
-		</ul>
-
+			</ul>
 	  </nav>
 
 	  <section class="parallax">
