--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <body>
 	  <nav>
 		<ul>
-			<li><a href="#">Inici</a></li>
-              <li><a href="#">Més receptes</a>
-                    <ul><li><a href="">Galets de Nadal</a></li>
-                    <li><a href="">Trinxat de Cerdanya</a></li>
-                    <li><a href="">Butifarra amb seques</a></li></ul>
-                </li>
-              <li><a href="#">Millors restaurants tradicionals</a>
-                    <ul><li><a href="">Casa la Iaia</a></li>
-                    <li><a href="">Hotel Rosa, Taradell</a></li>
-                    <li><a href="">El nou Monseny, Taradell</a></li>
-                    <li><a href="">Fussimanya, Tavèrnoles</a></li></ul>
-                </li>
-              <li><a href="https://tomasgarolera.github.io/Exercici-1/">Contacte</a></li>
+			<li><a href="#">Inicio</a></li>
+				<li>
+					<a href="#">Productos</a>
+					<ul>
+						<li><a href="#">Producto 1</a></li>
+						<li><a href="#">Producto 2</a></li>
+						<li><a href="#">Producto 3</a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">Servicios</a>
+					<ul>
+						<li><a href="#">Servicio 1</a></li>
+						<li><a href="#">Servicio 2</a></li>
+						<li><a href="#">Servicio 3</a></li>
 		</ul>
 
 	  </nav>
