--- a/index.html
+++ b/index.html
@@ -7,21 +7,10 @@
   <body>
 	  <nav>
 		<ul>
-			<li><a href="#">Inicio</a></li>
-				<li>
-					<a href="#">Productos</a>
-					<ul>
-						<li><a href="#">Producto 1</a></li>
-						<li><a href="#">Producto 2</a></li>
-						<li><a href="#">Producto 3</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#">Servicios</a>
-					<ul>
-						<li><a href="#">Servicio 1</a></li>
-						<li><a href="#">Servicio 2</a></li>
-						<li><a href="#">Servicio 3</a></li>
+			<li><a href="#">Inici</a></li>
+              <li><a href="#">Més receptes</a></li>
+              <li><a href="#">Millors restaurants tradicionals</a></li>
+              <li><a href="https://tomasgarolera.github.io/Exercici-1/">Contacte</a></li>
 		</ul>
 
 	  </nav>
